// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeDetailsPortions custom styles 1`] = `
<View
  style={
    Array [
      Object {
        "width": 150,
      },
      Object {
        "customStyle": "style",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;

exports[`RecipeDetailsPortions no styles 1`] = `
<View
  style={
    Array [
      Object {
        "width": 150,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        },
      ]
    }
  >
    3
  </Text>
</View>
`;
